<resources>
    <string name="app_name">SPProject</string>
    <string name="title_activity_news_feeds">NewsFeeds</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profilePic">+</string>
    <string name="followingInFrag">Following</string>
    <string name="followersInFrag">Followers</string>
    <string name="e_mail_addressLogin">E-mail Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_upLogin">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password_up_to_9_chars">Password (up to 9 chars)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="user_account_settings">user_account_settings</string>
    <string name="prifile_Fragment">Profile</string>
    <string name="editprofile">Edit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="my_profile">My Profile</string>
    <string name="followers_following">Followers/Following</string>
    <string name="events">Events</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="events_fragment">Events</string>
    <string name="description">Description:</string>
    <string name="update_picture">Update Picture</string>
    <string name="uploaded_post">Uploaded Post:</string>
    <string name="date">Date</string>
    <string name="time">time</string>
    <string name="descritopn">Descritopn</string>
    <string name="follow">Follow</string>
    <string name="user_id">user_id</string>
    <string name="following_in_db">following</string>
    <string name="followers_in_db">followers</string>
    <string name="unfollow">UnFollow</string>
    <string name="posts">posts</string>
    <string name="users">users</string>
    <string name="users_search">Users Search</string>
    <string name="full_Name">Full Name</string>
    <string name="write_your_favorite_sports">Write Your Favorite Sports</string>
    <string name="event_description">Event Description</string>
    <string name="register">Register</string>
    <string name="update_event">Update Event</string>
    <string name="create_event">Create Event</string>
    <string name="instructions_to_event">Write a description for your event: Date, Time, Location and How many Players Needed</string>
    <string name="events_in_events_display_fragment">events</string>
    <string name="uploaded_event">Uploaded Event</string>
    <string name="registered">registered</string>
    <string name="event_id">event_id</string>
</resources>
