<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myProfile"
            android:orderInCategory="100"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_action_profile"/>
        <item
            android:id="@+id/followers_following"
            android:title="@string/following"
            android:orderInCategory="100"
            android:icon="@drawable/ic_action_followers"/>
        <item
            android:id="@+id/events"
            android:title="@string/events"
            android:orderInCategory="100"
            android:icon="@drawable/ic_action_event"/>
        <item
            android:id="@+id/logout"
            android:title="@string/log_out"
            android:orderInCategory="100"
            android:icon="@drawable/ic_action_logout"/>
    </group>



</menu>
