<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toolbarcolor"
    tools:context="com.example.golan.spproject.Activities.SignInActivity">

    <EditText
        android:id="@+id/fullName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/full_Name" />


    <EditText
        android:id="@+id/userNameSignin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/fullName"
        android:layout_below="@+id/fullName"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/userNameSignin"
        android:layout_below="@+id/userNameSignin"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/password_up_to_9_chars"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordConfirmSignin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="20dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/passwordConfirmSignin"
        android:layout_below="@+id/passwordConfirmSignin"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/emailConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/confirm_e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/writeDescriptoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailConfirm"
        android:layout_below="@+id/emailConfirm"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/write_your_favorite_sports"/>

    <Button
        android:id="@+id/signupbtnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="#00ffffff"
        android:text="@string/sign_upLogin"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="italic" />

</RelativeLayout>
