<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/toolbarcolor">


        <TextView
            android:id="@+id/event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/create_event"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/instructionsToEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/event_title"
            android:layout_marginTop="39dp"
            android:text="@string/instructions_to_event"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/event_title"
            android:layout_marginTop="123dp"
            android:background="#11000000"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:paddingTop="5dp" />

        <Button
            android:id="@+id/update_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="69dp"
            android:background="#00ffffff"
            android:padding="10dp"
            android:paddingTop="10dp"
            android:text="@string/update_event"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />




    </RelativeLayout>
</FrameLayout>