<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toolbarcolor"
    tools:context="com.example.golan.spproject.Activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/Loginbtn"
        android:layout_centerVertical="true"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_email"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/e_mail_addressLogin"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="26dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Loginbtn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#11000000"
        android:elevation="10dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/signupbtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textStyle="italic" />


</RelativeLayout>
